# wwp-decoration

./: LICENSE  README.md  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build  wwp-decoration.xml
